--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -103,7 +103,6 @@ body {
   min-height: 100%;
   min-height: 100dvh;
   position: relative;
-  overflow-x: hidden;
 }
 
 a {
